--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@ body {
     margin: auto;
 }
 header {
-
+    background-color: #3C674E;
+    color: white;
 }
 footer {
-
+    background-color: #3C674E;
+    color: whitesmoke;
 }
 .photoofme {
 
