--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,13 @@ body {
 header {
     background-color: #3C674E;
     color: white;
+    border-radius: 15px;
 }
 footer {
     background-color: #3C674E;
     color: whitesmoke;
+    text-align: center;
+    border-radius: 15px;
 }
 .photoofme {
 
