--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,24 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body {
     max-width: 650px;
     margin: auto;
+    font-family: "Crimson Text", "Tahoma", sans-serif;
 }
 header {
     background-color: #3C674E;
-    color: white;
-    border-radius: 15px;
+    color: whitesmoke;
+    border-radius: 5px;
+    font-family: "Montserrat", "Tahoma", sans-serif;
+    padding: 10px;
 }
 footer {
     background-color: #3C674E;
     color: whitesmoke;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 5px;
+    padding: 10px;
 }
 .photoofme {
-
+    float: right;
 }
