--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header {
     background-color: #3C674E;
     color: whitesmoke;
     border-radius: 5px;
-    font-family: "Montserrat", "Tahoma", sans-serif;
+    font-family: "Montserrat", "Tahoma", serif;
     padding: 10px;
 }
 footer {
