--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@ footer {
     color: whitesmoke;
     text-align: center;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
 }
 .photoofme {
     float: right;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
