--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body {
     margin: auto;
+    max-width: 650px;
 }
 header {
-    max-width: 650px;
     background-color: #3C674E;
     color: whitesmoke;
     border-radius: 5px;
     font-family: "Montserrat", "Tahoma", serif;
     padding: 10px;
+    margin-left: 6em;
 }
 h2 {
     text-decoration-line: underline;
@@ -17,10 +18,9 @@ h2 {
 }
 main {
     font-family: "Crimson Text", "Tahoma", sans-serif;
-    max-width: 600px;
+    padding: ;
 }
 footer {
-    max-width: 650px;
     background-color: #3C674E;
     color: whitesmoke;
     text-align: center;
@@ -29,6 +29,6 @@ footer {
 }
 .photoofme {
     float: right;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-top: -5em;
+    box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: -10em;
 }
