--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ header {
     padding: 10px;
 }
 h2 {
-    padding: 2em;
     text-decoration-line: underline;
     text-decoration: 2px;
 }
@@ -25,11 +24,14 @@ footer {
     color: whitesmoke;
     text-align: center;
     border-radius: 5px;
-    padding: 5px;
+    padding: 3px;
+}
+.updated {
+
 }
 .photoofme {
     float: right;
+    float: clear;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     margin-top: -7em;
-    padding: 2em;
 }
