--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ header {
     background-color: #3C674E;
     color: whitesmoke;
     border-radius: 5px;
+    padding: 10px;
+}
+h1 {
+    color: whitesmoke;
     font-family: "Montserrat", "Tahoma", serif;
     padding: 10px;
 }
@@ -18,17 +22,16 @@ h2 {
 }
 main {
     font-family: "Crimson Text", "Tahoma", sans-serif;
-    padding: ;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 footer {
     background-color: #3C674E;
     color: whitesmoke;
+    font-family: "Crimson Text", "Tahoma", sans-serif;
     text-align: center;
     border-radius: 5px;
     padding: 3px;
-}
-.updated {
-
 }
 .photoofme {
     float: right;
