--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,13 @@ h1 {
     padding: 10px;
 }
 h2 {
-    margin-left: 15px;
     text-decoration-line: underline;
     text-decoration: 2px;
 }
 main {
     font-family: "Crimson Text", "Tahoma", sans-serif;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 footer {
     background-color: #3C674E;
