--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     max-width: 650px;
 }
 header {
-    background-color: #3C674E;
+    background-color: #7A0035;
     color: whitesmoke;
     border-radius: 5px;
     padding: 10px;
@@ -37,4 +37,5 @@ footer {
     float: clear;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     margin-top: -7em;
+    margin-right: 7px;
 }
