--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ h1 {
     color: whitesmoke;
     font-family: "Crimson Text", "Tahoma", serif;
     padding: 10px;
+    font-weight: normal;
+    font-size: large;
 }
 h2 {
     text-decoration-line: underline;
