--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ footer {
 }
 .photoofme {
     float: right;
-    float: clear;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     margin-top: -7em;
     margin-right: 7px;
+    width: 20%;
 }
