--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     max-width: 700px;
 }
 header {
-    background-color: #7A0035;
+    background-color: #3C674E;
     color: whitesmoke;
     border-radius: 5px;
     padding: 5px;
@@ -38,4 +38,8 @@ footer {
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     padding: 1em;
     width: 20%;
+}
+.updated {
+    margin-top: 0;
+    font-size: x-small;
 }
