--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,15 @@ h1 {
     font-size: x-large;
 }
 h2 {
-    text-decoration-line: underline;
+    text-decoration: underline;
     text-decoration: 2px;
 }
 main {
     font-family: "Montserrat", "Tahoma", sans-serif;
     margin-left: 10px;
+}
+a:link main {
+    color: 7A0035;
 }
 footer {
     background-color: #3C674E;
@@ -32,6 +35,10 @@ footer {
     text-align: center;
     border-radius: 5px;
     padding: 3px;
+}
+a:link footer {
+    color: whitesmoke;
+    text-decoration: none;
 }
 .photoofme {
     float: right;
