--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ a:link footer {
 .photoofme {
     float: right;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
-    padding: 1em;
+    margin-top: 10px;
+    margin-right: 10px;
     width: 20%;
 }
 .updated {
