--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body {
     margin: auto;
@@ -8,14 +8,15 @@ header {
     background-color: #3C674E;
     color: whitesmoke;
     border-radius: 5px;
-    padding: 5px;
+    padding: 1px;
 }
 h1 {
     color: whitesmoke;
-    font-family: "Crimson Text", "Tahoma", serif;
-    padding: 10px;
+    font-family: "Cormorant Garamond", "Tahoma", serif;
+    padding: 5px;
     font-weight: normal;
-    font-size: x-large;
+    font-size: 44px;
+    padding-left: 1em;
 }
 h2 {
     text-decoration: underline;
@@ -25,9 +26,6 @@ main {
     font-family: "Montserrat", "Tahoma", sans-serif;
     margin-left: 10px;
 }
-a:link main {
-    color: 7A0035;
-}
 footer {
     background-color: #3C674E;
     color: whitesmoke;
@@ -36,18 +34,17 @@ footer {
     border-radius: 5px;
     padding: 3px;
 }
-a:link footer {
+.byuilink {
     color: whitesmoke;
     text-decoration: none;
 }
 .photoofme {
     float: right;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
-    margin-top: 10px;
-    margin-right: 10px;
+    margin-top: -133px;
+    margin-right: 12px;
     width: 20%;
 }
 .updated {
-    margin-top: 0;
     font-size: x-small;
 }
