--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@ footer {
     float: right;
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     margin-top: -133px;
-    margin-right: 12px;
+    margin-right: 15px;
+    margin-left: 2px;
     width: 20%;
 }
 .updated {
