--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ header {
     color: whitesmoke;
     border-radius: 5px;
     padding: 1px;
+    margin-top: 10px;
 }
 h1 {
     color: whitesmoke;
@@ -39,7 +40,6 @@ footer {
     box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
     margin-top: -133px;
     margin-right: 15px;
-    margin-left: 2px;
     width: 20%;
 }
 .updated {
